--- a/comparisons/package.json
+++ b/comparisons/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "assert": "^2.0.0",
     "cli-chart": "^0.3.1",
+    "colors": "^1.4.0",
     "jasmine": "^3.5.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
