Standardize time util output

--- a/comparisons/package.json
+++ b/comparisons/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "compare": "node ./utils/compare.js",
-    "jest": "time ./node_modules/.bin/jest modules/",
-    "jest:fibonacci": "time ./node_modules/.bin/jest modules/fibonacci.test.js",
-    "jest:dom": "time ./node_modules/.bin/jest modules/dom.test.js",
-    "jest:promises": "time ./node_modules/.bin/jest modules/promises.test.js",
-    "jasmine": "time node ./node_modules/jasmine/bin/jasmine.js ./spec/*.js",
-    "jasmine:fibonacci": "time node ./node_modules/jasmine/bin/jasmine.js ./spec/fibonacci.js",
-    "jasmine:dom": "time node ./node_modules/jasmine/bin/jasmine.js ./spec/dom.js",
-    "jasmine:promises": "time node ./node_modules/jasmine/bin/jasmine.js ./spec/promises.js",
-    "mocha": "time ./node_modules/mocha/bin/mocha",
-    "mocha:fibonacci": "time ./node_modules/mocha/bin/mocha ./test/fibonacci.js",
-    "mocha:dom": "time ./node_modules/mocha/bin/mocha ./test/dom.js",
-    "mocha:promises": "time ./node_modules/mocha/bin/mocha ./test/promises.js"
+    "jest": "time -p ./node_modules/.bin/jest modules/",
+    "jest:fibonacci": "time -p ./node_modules/.bin/jest modules/fibonacci.test.js",
+    "jest:dom": "time -p ./node_modules/.bin/jest modules/dom.test.js",
+    "jest:promises": "time -p ./node_modules/.bin/jest modules/promises.test.js",
+    "jasmine": "time -p node ./node_modules/jasmine/bin/jasmine.js ./spec/*.js",
+    "jasmine:fibonacci": "time -p node ./node_modules/jasmine/bin/jasmine.js ./spec/fibonacci.js",
+    "jasmine:dom": "time -p node ./node_modules/jasmine/bin/jasmine.js ./spec/dom.js",
+    "jasmine:promises": "time -p node ./node_modules/jasmine/bin/jasmine.js ./spec/promises.js",
+    "mocha": "time -p ./node_modules/mocha/bin/mocha",
+    "mocha:fibonacci": "time -p ./node_modules/mocha/bin/mocha ./test/fibonacci.js",
+    "mocha:dom": "time -p ./node_modules/mocha/bin/mocha ./test/dom.js",
+    "mocha:promises": "time -p ./node_modules/mocha/bin/mocha ./test/promises.js"
   },
   "author": "",
   "license": "ISC",
