--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,19 @@
 jobs:
   compare-all:
-    machine:
-      - image: circleci/node:10.16.3
+    machine: true
     steps:
       - checkout
+      - run:
+          name: Install node@10.16.3
+          command: |
+            set +e
+            curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.5/install.sh | bash
+            export NVM_DIR="/opt/circleci/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            nvm install v10.16.3
+            nvm alias default v10.16.3
+            echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
+            echo "[ -s \"$NVM_DIR/nvm.sh\" ] && . \"$NVM_DIR/nvm.sh\"" >> $BASH
       - run: cd ./comparisons && npm install
       - run: cd ./comparisons && npm run compare 5
 workflows:
