--- a/api-demo/package.json
+++ b/api-demo/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "node ./index.js"
+    "serve": "node ./index.js",
+    "test": "bash ./ops/test.sh"
   },
   "author": "",
   "license": "ISC",
